--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 DB_HOST=localhost
-DB_USER=usuario_local
-DB_PASS=contraseña_local
-DB_NAME=nombre_db
+DB_USER=root
+DB_PASS=
+DB_NAME=aurastyle
 DB_PORT=3306
